--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ Spring Fest is an avenue to embrace the fun and frolic embedded with professiona
 
 <div class="footer">
      <hr>
-   <h2>  Developed By Harish bairagi<br><a href="https://wa.me/918764470753?text=">Hire me</a> <details style="opacity:75%;">Myself harish bairagi, i am pursuing B.Tech in ECE Branch From Skit Jaipur ( 1st year student). Now i am promoting IIT Kharagpur Annual fest SpringFest 
+   <h2>  Developed By Harish bairagi<br><a style="background:red;color:white;border-radius:25px; text-decoration:50%;" href="https://wa.me/918764470753?text=">&nbsp &nbsp &nbsp Hire me &nbsp &nbsp &nbsp </a> <details style="opacity:75%;">Myself harish bairagi, i am pursuing B.Tech in ECE Branch From Skit Jaipur ( 1st year student). Now i am promoting IIT Kharagpur Annual fest SpringFest 
      <summary>About me</summary>
      </details>
      </h2>
