--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ Spring Fest is an avenue to embrace the fun and frolic embedded with professiona
 </div>
 
 <div class="footer">
-     <hr><h2>  Developed By Harish bairagi<br><a style="background:red;color:white;border-radius:25px; text-decoration:50%;" href="https://wa.me/918764470753?text=">&nbsp Hire me For Website  Design & Making &nbsp &nbsp  </a> 
+     <hr><h2>  Developed By Harish bairagi<br><a style="background:red;color:white;border-radius:25px; text-decoration:50%;" href="https://wa.me/918764470753?text=">&nbsp Hire me For Website  Design &nbsp &nbsp  </a> 
    
    <div class="logoo">
         <a href="https://wa.me/+918764470753?text=">
