--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <!-- for navbar -->
          <a href="#" style=""><img src="link/nave.jpg" style="text-align:left; margin-left   : ;margin-top   : -7px; width:13%;"alt=""></a>
     </div>
-  <H4>Register for IIT Kharagpur's Annual Cultural fest Springfest for Free Passes and participate in Competitions for benefits in Concerts night and Get Opportunity to Visit IIT Kharagpur Campus & build connections with iitians<br>Official Dates: 2023
+  <H4>Register for IIT Kharagpur's Annual Cultural fest Springfest for tickets & Passes and participate in Competitions for benefits in Concerts night and Get Opportunity to Visit IIT Kharagpur Campus & build connections with iitians<br>Official Dates: 2023
   <div class="link">
 <a  href="reg.html"style="font-size:43px;"><img src="kgp/1.jpg" alt="" style="width:94%; margin-bottom:-10px; margin-left   : -12px; border-radius:10px;">  Registration </a>
 </div>
