--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
      <meta name="author" content=" Skiteventbyharish"> 
      <meta name="keywords" content="harish ,skit Springfest, harish bairagi, iit , skit eca">
      <meta name="description" content ="IIT Kharagpur annual cultural fest Springfest Information for Skit Student . all information here. how to go iitkgp and participate ">
-     <title>Skit Springfest iitkgp </title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9595704934821265"
+     crossorigin="anonymous"></script>
+ <title>Skit Springfest iitkgp </title>
 </head>
 
 <body>
