--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
      <title>
 Harish An index trader & Programmer 
      </title>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9595704934821265"
+     crossorigin="anonymous"></script>
 </head>
 
 
