--- a/index.html
+++ b/index.html
@@ -9,7 +9,17 @@
      Chart of top Security DJI Future , Nifty 50 , Banknifty ,Nifty & Banknifty CE-PE Price ,Nifty OI data, SgxNifty,
      CrudeOil , Usdinr ,  Global markets, Top gainers-losers in Indian market, Bitcoin , 
      Fii-Dii data, Fundamental analysis ">
-     
+      <meta name="keywords" content="Traderharish ,niftytrade , niftytrade.ml ,coderharish , Traderharish epizy ,open interest,call put ratio, Sgxnifty live , usa DJI, nifty oi , Banknifty, bitcoin, Global market, dollar index, forex trading ,Crypto, eth, Cryptocurriences, option-chain ,option trading future, Sensex, reliance, tcs ,stock equity, penny stocks, tata motors, zomato share, yes bank share, Pcr open interest, Nse ,mcx, bse, nyse, Dji, uk100, nifty50, russia ukraine war, crudeoil , dollar , gbp,usdinr, gold,silver, stock market crash , recession, adani debt, adani group,tata ,tesla stocks, ev,elon musk, american market ">
+     <meta name="author" content="Traderharish , niftytrade, niftytrade.ml">
+     <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZGE8GV0KFS"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZGE8GV0KFS');
+</script>
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
